<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="300dp"
android:layout_height="match_parent"
android:layout_gravity="center_horizontal"
android:stretchColumns="1">
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:scaleType="centerInside"
        android:src="@drawable/logo"
        android:longClickable="false" />


</TableRow>

<!-- 输入用户名的行 -->

<TableRow
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/userEditTextRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:layout_weight="6"
        android:hint="@string/ID" />
</TableRow>
<!-- 输入密码的行 -->
<TableRow>

    <EditText
        android:text=""
        android:id="@+id/pwdEditTextRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_weight="10"/>
</TableRow>
    <!-- 输入密码的行 -->
    <TableRow>

        <EditText
            android:text=""
            android:id="@+id/nnEditTextRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/nickname"
            android:layout_weight="10"/>
    </TableRow>
<!-- 定义登录、取消按钮的行 -->
<LinearLayout android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">
    <Button
        android:id="@+id/bnRegister"
        android:text="@string/nextstep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#25d8e1"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:singleLine="false"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />
</LinearLayout>
<LinearLayout android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center">

    <TextView
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="点击下一步表示您同意"
    android:id="@+id/textView"
    android:textColor="@color/button_material_dark"
    android:autoLink="all"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true" />
    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/useragreement"
        android:id="@+id/textView1"
        android:textColor="@color/button_material_dark"
        android:autoLink="all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textIsSelectable="false"
        android:autoText="false"
        android:textStyle="bold" />



</LinearLayout>
</TableLayout>