<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!-- 标题栏 -->
    <FrameLayout
        android:id="@+id/field_titlebar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textColor="@color/colorBlack"
                android:text="Slinky" />
        </LinearLayout>

    </FrameLayout>
    <TableLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="1">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:scaleType="centerInside"
                android:src="@drawable/logo"
                android:longClickable="false" />


        </TableRow>

        <!-- 输入用户名的行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/userEditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:layout_weight="6"
                android:hint="@string/ID"
                android:textColorLink="@color/colorBlack"
                android:textCursorDrawable="@null"/>
        </TableRow>
        <!-- 输入密码的行 -->
        <TableRow>

            <EditText
                android:text=""
                android:id="@+id/pwdEditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_weight="10"
                android:textColorLink="@color/colorBlack"/>
        </TableRow>
        <!-- 定义登录、取消按钮的行 -->
        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/bnLogin"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:background="@color/colorRed"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:singleLine="false"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />
        </LinearLayout>
        <RelativeLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/login_problem"
                android:id="@+id/tvProblem"
                android:textColor="@color/colorBlack"
                android:autoLink="all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:clickable="true" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/register"
                android:id="@+id/tvRegister"
                android:textColor="@color/colorBlack"
                android:autoLink="all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:clickable="true" />

        </RelativeLayout>
    </TableLayout>
</LinearLayout>
