<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/tool_bar_layout"
        android:layout_width="fill_parent"
        android:layout_height="64.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/fourfragment_club"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/my_page_club_selector"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:text="社团"
                android:textColor="@color/colorBlack"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourfragment_night_mode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/my_page_nightmode_selector"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:text="@string/mine_item_night_mode"
                android:textColor="@color/colorBlack"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourfragment_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/fourfragment_settingbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/my_page_settings_selector"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:text="@string/mine_item_settings"
                android:textColor="@color/colorBlack"
                />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/horizontal_divider_one"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@color/colorBlack"/>
    <RelativeLayout
        android:id="@+id/layout_my_page_message"
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt_my_page_message"
            style="@style/my_page_item_tv"
            android:text="社 区"
            android:textColor="@color/colorBlack"/>

        <ImageView
            android:id="@+id/img_my_page_message_right_arrow"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:background="@color/colorBlack"
            android:id="@+id/my_page_message_divider"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_my_page_offline"
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt_my_page_offline"
            style="@style/my_page_item_tv"
            android:text="收 藏"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txt_my_page_offline_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="9.0dip"
            android:layout_toLeftOf="@+id/img_my_page_offline_right_arrow"
            android:textColor="@color/colorBlack"
            android:textSize="14.0sp"/>

        <ImageView
            android:id="@+id/img_my_page_offline_right_arrow"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:background="@color/colorBlack"
            android:id="@+id/my_page_offline_divider"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_my_page_activity"
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt_my_page_activity"
            style="@style/my_page_item_tv"
            android:text="@string/mine_item_activity"
            android:textColor="@color/colorBlack"/>


        <ImageView
            android:id="@+id/img_my_page_activity_right_arrow"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:background="@color/colorBlack"
            android:id="@+id/my_page_activity_divider"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_my_page_sell"
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt_my_page_sell"
            style="@style/my_page_item_tv"
            android:text="@string/mine_item_sell"
            android:textColor="@color/colorBlack"/>

        <ImageView
            android:id="@+id/img_my_page_sell_right_arrow"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:id="@+id/my_page_sell_divider"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"
            android:background="@color/colorBlack"/>

        <TextView
            android:id="@+id/txt_my_page_sell_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5.0dip"
            android:layout_toLeftOf="@+id/img_my_page_sell_right_arrow"
            android:text="@string/mine_item_sell_introduce"
            android:textColor="@color/colorBlack"
            android:textSize="12.0sp"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt21"
            style="@style/my_page_item_tv"
            android:text="游 戏"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txt22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="9.0dip"
            android:layout_toLeftOf="@+id/img21"
            android:textColor="@color/colorBlack"
            android:textSize="14.0sp"/>

        <ImageView
            android:id="@+id/img21"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:background="@color/colorBlack"
            android:id="@+id/view21"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt31"
            style="@style/my_page_item_tv"
            android:text="会 议"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txt32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="9.0dip"
            android:layout_toLeftOf="@+id/img31"
            android:textColor="@color/colorBlack"
            android:textSize="14.0sp"/>

        <ImageView
            android:id="@+id/img31"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:background="@color/colorBlack"
            android:id="@+id/view31"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt41"
            style="@style/my_page_item_tv"
            android:text="功 能"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txt42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="9.0dip"
            android:layout_toLeftOf="@+id/img41"
            android:textColor="@color/colorBlack"
            android:textSize="14.0sp"/>

        <ImageView
            android:id="@+id/img41"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:background="@color/colorBlack"
            android:id="@+id/view41"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt51"
            style="@style/my_page_item_tv"
            android:text="功 能"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txt52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="9.0dip"
            android:layout_toLeftOf="@+id/img51"
            android:textColor="@color/colorBlack"
            android:textSize="14.0sp"/>

        <ImageView
            android:id="@+id/img51"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:background="@color/colorBlack"
            android:id="@+id/view51"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt61"
            style="@style/my_page_item_tv"
            android:text="功 能"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txt62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="9.0dip"
            android:layout_toLeftOf="@+id/img61"
            android:textColor="@color/colorBlack"
            android:textSize="14.0sp"/>

        <ImageView
            android:id="@+id/img61"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:background="@color/colorBlack"
            android:id="@+id/view61"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/my_page_item_root">

        <TextView
            android:id="@+id/txt71"
            style="@style/my_page_item_tv"
            android:text="功 能"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txt72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="9.0dip"
            android:layout_toLeftOf="@+id/img71"
            android:textColor="@color/colorBlack"
            android:textSize="14.0sp"/>

        <ImageView
            android:id="@+id/img71"
            style="@style/my_page_item_right_arrow"/>

        <View
            android:background="@color/colorBlack"
            android:id="@+id/view71"
            style="@style/my_page_item_divider"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_dynamic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

</LinearLayout>